Nginx-Cache/Deployments/Ingress/nginx-cache-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-cache-ingress
  namespace: cache-dev
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
    nginx.ingress.kubernetes.io/enable-cors: "true"       
spec:  
  rules:    
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: nginx-cache-svc
          servicePort: 80
